--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2015,7 +2015,7 @@ signal ranges in the map.
 
 Recovering both faint extended structure and bright sources in the
 same field poses an extra challenge. Strategies for this are explored
-in \cref{Chapter}{sec:tweak}{Tailoring your Reduction}.
+in \cref{Chapter}{sec:tweak}{Tailoring Your Reduction}.
 
 \cref{Figure}{fig:becompare}{The images below} shows a comparison between
 maps reduced with the default configuration file and using
@@ -2058,7 +2058,7 @@ signal ranges in the map.
 
 Recovering both faint extended structure and bright sources in the
 same field poses an extra challenge. Strategies for this are explored
-in \cref{Chapter}{sec:tweak}{Tailoring your Reduction}.
+in \cref{Chapter}{sec:tweak}{Tailoring Your Reduction}.
 
 \cref{Figure}{fig:becompare}{The images below} shows a comparison between
 maps reduced with the default configuration file and using
@@ -2104,7 +2104,7 @@ spurious emission in your final map.
 
 The point to \texttt{dimmconfig\_bright\_extended.lis} so the parameters are in
 addition to those listed above. These files are discussed in more
-detail in \cref{Chapter}{sec:tweak}{Tailoring your Reduction}.
+detail in \cref{Chapter}{sec:tweak}{Tailoring Your Reduction}.
 
 \clearpage
 
@@ -3209,7 +3209,7 @@ differ from the the values given in \texttt{dimmconfig.lis}.
 
 
 \clearpage
-\section{\xlabel{tweak}Tailoring your Reduction}
+\section{\xlabel{tweak}Tailoring Your Reduction}
 \label{sec:tweak}
 
 
