docs: Move jcmtstate remarks into TIP boxes in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -1191,13 +1191,26 @@ information into a simple ASCII tab-separated table.
 \end{verbatim}
 \end{myquote}
 
-The \texttt{-h} option to \task{jcmtstate} can be used to find more
-information on the command. In particular, multiple files can be supplied
-to the command using standard shell wild cards. If you have already
+Multiple files can be supplied to the command using standard shell wild
+cards. If you have already
 concatenated your data you can simply input the single concatenated
-file. \textbf{It may be useful to view the scan pattern for your
+file. It may be useful to view the scan pattern for your
 observation, particularly for maps taken at high elevations, to ensure
-the pattern completed successfully.}
+the pattern completed successfully.
+
+
+\begin{latexonly}
+\begin{center}
+\begin{fmpage}{0.95\linewidth}
+\vspace{0.1cm}
+TIP: Follow the \task{jcmtstate} command with \texttt{-h} to find out more information.
+\end{fmpage}
+\end{center}
+\end{latexonly}
+
+\begin{htmlonly}
+  \textbf{TIP: Follow the \task{jcmtstate} command with \texttt{-h} to find out more information.\\\\}
+\end{htmlonly}
 
 This catalogue can be loaded into \topcat\ for plotting, making sure
 to specify the TST format during loading.
