docs: Complete sentences end in fullstop in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -576,7 +576,7 @@ reduce and visualise their data using \starlink\ packages:
 \smurf \cite{smurf}, \Kappa \cite{kappa}, \gaia \cite{gaia} and \picard
 \cite{picard}.
 
-This guide covers the following:
+This guide covers the following topics.
 \begin{itemize}
 \itemsep0em
 \item \cref{Chapter}{sec:intro}{Chapter 1} -- Computer resources you'll need before getting started.
@@ -596,7 +596,7 @@ Before reducing SCUBA-2 data using the Dynamic Iterative Map-Maker, we
 recommend you confirm your resources are sufficient for your type of
 map.
 
-We recommend the following:\\
+We recommend the following.\\
 \begin{table}[h!]
 \centering
 \begin{tabular}{ll}
@@ -1689,8 +1689,7 @@ criteria specified in the configuration file is reached.
 \\*\\*
 \textbf{Option 1: Fixed number of iterations}\\*
 Specifying the number of iterations in the configuration file is done via
-the \texttt{numiter} parameter. In \texttt{dimmconfig.lis}, this is given
-by:
+the \texttt{numiter} parameter. This is shown below for \texttt{dimmconfig.lis}.
 \vspace{-0.1cm}
 \begin{quote}
 \begin{verbatim}
@@ -2824,7 +2823,7 @@ perform the steps below.
 \\*\\*
 \textbf{The steps}\\*
 After applying any necessary FCF, \drrecipe{SCUBA2\_CHECK\_RMS} simply executes
-the following steps to get the map noise:
+the following steps to get the map noise.
 \\*\\*
 (1) Crops the map to remove the noisy edges
 \begin{myquote}
