docs: Reduce usage of em-dash in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -613,7 +613,7 @@ Blank fields&32 - 64 GB\\
 
 \textbf{Why these recommendations?}\\*
 For large-area maps it is important to process a full observation in a
-single chunk---see the text box on
+single chunk. See the text box on
 \latexhtml{Page~\pageref{page:text}}{\htmlref{What to look
 for}{box:chunk}} for an explanation of chunking. For large maps, using normal
 map-maker parameters a machine of 96\,GB is acceptable. It is
@@ -1388,7 +1388,7 @@ ignored and the on-sky performance of the array is calculated.
 \end{verbatim}
 \end{myquote}
 It will prompt for a configuration file to describe the cleaning
-steps---the default is the supplied \texttt{dimmconfig\_calcnoise.lis}.
+steps. The default is the supplied \texttt{dimmconfig\_calcnoise.lis}.
 Two noise measurements are reported in the terminal: the
 `Effective noise' and the `Effective NEP'.
 
@@ -2317,7 +2317,7 @@ Total samples available from all chunks: 18273302 (3067.53 bolos)
 \flushbottom
 
 Once the map-maker has completed you can open your output map using
-\gaia---see \cref{Figure}{fig:itermap}{this example}. The excerpt
+\gaia\ (see \cref{Figure}{fig:itermap}{this example}). The excerpt
 in \cref{Section}{sec:running}{Running the iterative map-maker} shows
 the output written to the terminal as you run the map-maker. There are
 a number of clues in this output that indicate the status of the
