--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -4621,8 +4621,7 @@ Facility}, \xref{Starlink User Note 258}{sun258}{}
 
 \bibitem{mapmaker}
 Chapin~E.~L., et~al., 2013, \textit{SCUBA-2: iterative map-making with the
-Sub-Millimetre User Reduction Facility} MNRAS,
-\htmladdnormallink{accepted}{http://arxiv.org/abs/1301.3652}
+Sub-Millimetre User Reduction Facility} MNRAS, 430, 2545
 
 \bibitem{ssds}
 Currie~M.~J., Wallace~P.~T., Warren-Smith~R.~F., 1989,
@@ -4635,8 +4634,7 @@ Currie~M.~J., Berry~D.~S, 2013, \textit{KAPPA -- Kernel Application Package},
 
 \bibitem{dempsey12}
 Dempsey~J.~T. et al., 2013, \textit{SCUBA-2: on-sky calibration using
-submillimetre standard sources}, MNRAS,
-\htmladdnormallink{accepted}{http://arxiv.org/abs/1301.3773}
+submillimetre standard sources}, MNRAS, 430, 2534
 
 \bibitem{dempsey-spie}
 Dempsey~J.~T., Friberg~P., Jenness~T., Bintley~D., Holland~W.~S., 2010
@@ -4656,8 +4654,7 @@ PIpeline for Combining and Analyzing Reduced Data}
 
 \bibitem{s2main}
 Holland, W. S., et~al, 2013, \textit{SCUBA-2: The 10,000 pixel bolometer
-camera on the James Clerk Maxwell Telescope}, MNRAS,
-\htmladdnormallink{accepted}{http://arxiv.org/abs/1301.3650}
+camera on the James Clerk Maxwell Telescope}, MNRAS, 430, 2513
 
 \bibitem{flux1}
 Jenness~T., et~al, 2002, \htmladdnormallink{\textit{Towards the automated
