--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -582,8 +582,8 @@ This guide covers the following topics.
 \item \cref{Chapter}{sec:intro}{Chapter 1} -- Computer resources you'll need before getting started.
 \item \cref{Chapter}{sec:s2}{Chapter 2} -- A description of SCUBA-2 and its observing modes.
 \item \cref{Chapter}{sec:raw}{Chapter 3}  -- Data acquisition and instructions for examining raw data.
-\item \cref{Chapter}{sec:dimm}{Chapter 4}  -- An introduction to the Dynamic Iterative Map-Maker and a description of the available configuration files.
-\item \cref{Chapter}{sec:maps}{Chapter 5}  -- Procedures for reducing your data using the map-maker.
+\item \cref{Chapter}{sec:dimm}{Chapter 4}  -- An introduction to the Dynamic Iterative Map-Maker and a description of the configuration files.
+\item \cref{Chapter}{sec:maps}{Chapter 5}  -- How to reduce your data using the map-maker.
 \item \cref{Chapter}{sec:postprocess}{Chapter 6}  -- Post-processing reduction steps such as applying the FCF, co-adding multiple maps and estimating the noise.
 \item \cref{Chapter}{sec:tweak}{Chapter 7}  -- Options for tailoring the configuration parameters to improve your final map.
 \item \cref{Chapter}{sec:eg}{Chapter 8}  -- Two worked examples covering a \htmlref{blank cosmology field}{sec:cosmology} and a \htmlref{galactic field}{sec:bright_ex}.
@@ -635,7 +635,7 @@ cores.
 
 \subsection{\xlabel{software}Before you start: software}
 
-This manual utilises software from the \starlink\ packages: \smurf\
+This manual uses software from the \starlink\ packages: \smurf\
 \cite{smurf}, \Kappa\ \cite{kappa}, \gaia\ \cite{gaia}, \oracdr\
 \cite{oracdr} and \picard\ \cite{picard}. Starlink software must be
 installed on your system, and Starlink aliases and environment
@@ -646,7 +646,7 @@ data.
 \subsubsection{KAPPA and SMURF for data processing}
 
 The Sub-Millimetre User Reduction Facility, or \textsc{Smurf},
-contains the Dynamic Iterative Map-Maker (DIMM) that will process raw
+contains the Dynamic Iterative Map-Maker that will process raw
 SCUBA-2 data into images (see \smurfsun). \textsc{Kappa} meanwhile is
 an application package comprising general purpose commands for
 manipulating and visualising NDF data (see \kappasun). Before starting
@@ -684,7 +684,7 @@ as source detection, 3\textsc{d} visualisation, photometry and the ability
 to query and overlay on-line or local catalogues.
 \begin{myquote}
 \begin{verbatim}
-% gaia 850_map.sdf
+% gaia map.sdf
 \end{verbatim}
 \end{myquote}
 
@@ -887,12 +887,12 @@ bouncing off the edge of the area. To ensure an even sky background it
 is recommended a minimum of three, but preferably more than five,
 \textsc{pong} maps are included in a single observation with a
 rotation introduced between each one. In this way a circular pattern
-is built up, (see the right-hand panel of \cref{Figure}{fig:scan}{graphic below}),
+is built up, (see the lower right-hand panel of \cref{Figure}{fig:scan}{graphic below}),
 with a diameter equal to your requested map size.
 \vspace{0.2cm}\\
 To recover large-scale extended structure you are advised to use
 larger \textsc{pong} maps which scan at a higher rate. This option is
-in preference to tiling multiple smaller maps. Ultimately it is the
+preferable to tiling multiple smaller maps. Ultimately it is the
 size of the SCUBA-2 field-of-view that determines the sensitivity to
 large-scale structure.
 \end{minipage}
@@ -944,7 +944,7 @@ your data reduction process and do not concern the iterative map-maker.
 
 However, there are reasons you may wish to examine your raw data in
 greater depth. The most likely motivation is unusual result from the
-map-maker such as higher than expected noise, artifacts in your map or
+map-maker such as higher than expected noise, artefacts in your map or
 inconsistent noise across multiple tiles.  This chapter will help you
 get to the bottom of many of these issues.
 
@@ -960,14 +960,14 @@ A normal science observation will follow the following sequence.
 The \param{SEQ\_TYPE} parameter in the FITS header may be used to
 identify the nature of each scan (see
 \cref{Section}{sec:fitsheader}{Headers and file structure}).
-When you access you data either at the JCMT or by downloading from the
-\htmladdnormallink{Science Archive}{http://www3.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/jcmt/}
+When you access raw from the \htmladdnormallink{Science Archive}{http://www3.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/jcmt/}
 \begin{latexonly}
 \footnote{\texttt{http://www3.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/jcmt/}}
 \end{latexonly}
 you will get \emph{all} of the files listed above. Later when you
 reduce your data using the map-maker you will include \emph{all} of
 the files (noise + flat-fields + science).
+
 Shown below is a list of the raw files for a single sub-array (in this
 case s8a) for a short calibration observation. The first file is the
 short, dark noise; the second and last scans are the fast flat-field
@@ -1269,8 +1269,8 @@ initiated simply typing \texttt{gaia} into a terminal.
 \end{verbatim}
 \end{myquote}
 
-Loading a file in \textsc{Gaia} produces two windows (see
-\cref{Figure}{fig:gaia_main}{upper graphic}). The main window shows a
+Loading a file in \textsc{Gaia} produces two windows. The main window (see
+\cref{Figure}{fig:gaia_main}{upper graphic}) shows a
 map of bolometer values at a given point in time. The time slice
 displayed may be changed by scrolling through the time axis. This is
 done in the second window entitled \gaiathing{Display image sections of
@@ -1289,9 +1289,10 @@ window.
 }
 
 A third window will appear when you click on a bolometer---the
-\gaiathing{Spectral plot}. This shows an automatically scaled plot of the raw
-time stream of data for that given bolometer. It will be overridden
-when you click on a different bolometer.
+\gaiathing{Spectral plot} (see \cref{Figure}{fig:gaia_spec}{lower graphic}).
+This shows an automatically scaled plot of the raw time stream of data for
+that given bolometer. It will be overridden when you click on a different
+bolometer.
 
 \myfig{sc21_gaia2}{[t]}{width=0.8\linewidth}{fig:gaia_spec}{
   \gaia\ spectral plot window}{
@@ -1412,7 +1413,7 @@ details on how to examine it.
 \section{\xlabel{dimm}The Dynamic Iterative Map-Maker Explained}
 \label{sec:dimm}
 
-The Dynamic Iterative Map-Maker (DIMM), hereafter just referred to as
+The Dynamic Iterative Map-Maker, hereafter just referred to as
 the map-maker is the tool you will use to produce SCUBA-2 maps. It
 performs all pre-processing steps to clean the data, followed by
 iteratively solving for multiple signal components and regridding to
@@ -1439,8 +1440,8 @@ plus noise. A list of the modelled components can be seen in
 \textbf{The map-maker requires a configuration file to accompany each
 reduction.} This file instructs the map-maker on the pre-processing
 steps, which components to iteratively model, the parameters to use
-when doing so, and finally the stopping (or convergence) criteria.
-There is a single `master' configuration
+when doing so, and the stopping (or convergence) criteria.
+There is a single generic default configuration
 file called \texttt{dimmconfig.lis}. A copy of this file is available in
 \cref{Appendix}{app:dimm}{an appendix}.
 
@@ -1460,14 +1461,12 @@ below} shows the flow chart of the map-making process
 for \texttt{dimmconfig.lis}. It is divided into two sections: the
 pre-processing stage where the data are cleaned, then the iterative
 stage where the different models are subtracted and the convergence checked.
-\cref{Table}{tab:dimmdef}{A table of active variables} gives all the
-configuration parameters in \texttt{dimmconfig.lis} again, divided
-into the two main stages.
+
 
 \begin{center}
 \begin{minipage}[t]{0.95\linewidth}
 \textbf{1. Initial cleaning and downsampling}\\
-The first task the map-maker perform is to down-sample the data. The
+The first task of the map-maker is to down-sample the data. The
 raw time-series data is re-sampled at a rate that matches the
 requested pixel size, the equivalent to applying a low-pass filter.
 Down-sampling saves time and memory usage when running the map-maker.
@@ -1478,7 +1477,7 @@ subtracted from each bolometer; spikes and dc steps are removed; any
 resulting gaps in the time-series are filled in.
 \\*\\*
 \textbf{2. Iterative steps}\\
-Next comes the iterative stage of the process. First to be modelled
+Next comes the iterative stage. First to be modelled
 and removed are \texttt{COM} and \texttt{GAI} which work together to
 calculate the average signal template of all the bolometers, and then
 fit/remove the templates from each bolometer. The next model
@@ -1642,7 +1641,7 @@ more details see \cref{Appendix}{app:cal}{SCUBA-2 data calibration}. \\
 \begin{minipage}[t]{0.12\linewidth}
 \centering\texttt{FLT}
 \end{minipage}
-\begin{minipage}[t]{0.88\linewidth}The \texttt{FLT} model acts on the FFT
+\begin{minipage}[t]{0.88\linewidth}The \texttt{FLT} model acts on the Fourier transform
 of the bolometer data. High-pass (only allows \textit{higher} frequencies to
 pass) and low-pass (only allows \textit{lower} frequencies to pass) filters
 can be specified. These cut-off frequencies can either be be specified by
@@ -1660,9 +1659,9 @@ further discussion of this matter is given in
 \begin{minipage}[t]{0.12\linewidth}
 \centering\texttt{AST}
 \end{minipage}
-\begin{minipage}[t]{0.88\linewidth}This step involves both the creation of the
-\texttt{AST} model and the final science map. Hence, the position of
-\texttt{AST} in the model order indicates at what stage the astronomical
+\begin{minipage}[t]{0.88\linewidth}The \texttt{AST} model is generated in
+conjunction with a science map. Hence, the position of \texttt{AST} in the
+model order indicates at what stage the astronomical
 image should be estimated. When the \texttt{AST} model is called, the first
 step is regridding the raw time-series data, (using nearest-neighbour sampling),
 to produce an estimate of the final map. Following this, the map is
@@ -1714,8 +1713,9 @@ The convergence criteria is set by the \texttt{maptol} parameter.
 
 When running the map-maker, \texttt{maptol} gives the average
 normalised change in the value of map pixels
-between subsequent iterations. Convergence is reached when the change
-is less than the parameter \texttt{maptol}. It has units of the noise
+between subsequent iterations. Convergence is reached when the  mean
+change across all pixels is less than the parameter \param{maptol}.
+It has units of the noise
 in the map, thus \texttt{maptol}$=$0.05 means a change of
 $<$0.05\,$\sigma$. This option has the advantage of directly assessing
 the noise in the resulting map.
@@ -1835,10 +1835,9 @@ provide a reasonably good map for all types of observations. However,
 compromises have been made to reach that balance.
 
 Whilst \texttt{dimmconfig.lis} is always a good recipe to start with
-for your first run through of \makemap\ you will want to follow this
-up with a specialised recipe that will suit your observation. A few
-specialised configuration files are supplied with \smurf\ and can be
-found in \texttt{\$STARLINK\_DIR/share/smurf/}.
+you will want to follow this up with a specialised recipe that will suit
+your observation. A few specialised configuration files are supplied with
+\smurf\ and can be found in \texttt{\$STARLINK\_DIR/share/smurf/}.
 
 The specialised files are all based on \texttt{dimmconfig.lis}. This
 is illustrated by \cref{Figure}{fig:configtree}{figure below} where
@@ -2163,7 +2162,7 @@ The default pixel sizes are:
 These can be changed by adding the \texttt{pixsize=}$x$ to the
 command string\footnote{The default sizes are defined as one quarter
 of the Airy disk rounded up to the nearest half arcsecond.}, where $x$
-is your desired pixel size in arcseconds. We advise that you do not
+is your desired pixel size in arcsecs. We advise that you do not
 increase the pixel size at this stage as it will compromise model
 fitting---instead regrid your map as a post-processing step.
 
@@ -2506,8 +2505,7 @@ your data from units of pW to janskys (Jy). For more information on calibrating
 SCUBA-2 data see Dempsey et al. (2013) \cite{dempsey12}.
 \newline
 
-Below are our default FCFs. Note that the \fcfb\ will be applied
-by the pipeline when reducing your data with \oracdr.
+Below are our default FCFs.
 
 \latex{\vspace{0.5cm}}
 \latex{\renewcommand*\arraystretch{1.2}}
@@ -2740,7 +2738,6 @@ MAKEMOS_SIGMAS = 3
 \end{quote}
 
 Currently there is no advantage in terms of data quality to reducing
-\texttt{\`{}cat listoffiles.txt\`{}}
 all observations simultaneously or separately. However, the latter
 does allow the option of assessing the individual maps before co-adding.
 
@@ -2797,8 +2794,9 @@ REGISTER_Y  = DD:MM:SS.S
 \label{sec:checkrms}
 
 You can use the \picard\ recipe \drrecipe{SCUBA2\_CHECK\_RMS} get the
-noise. This recipe estimates the RMS from both the map and the NEP and
-writes out the results in a log file called \texttt{log.checkrms}. The
+noise. This recipe estimates the RMS from both the map, the NEP, and
+the RMS predicted by the Integration Time Calculator. It then writes out
+a series of results in a log file called \texttt{log.checkrms}. The
 parameters written to this file are listed in
 \cref{Appendix}{app:checkrmsparams}{SCUBA2_CHECK_RMS}.
 
@@ -2811,10 +2809,9 @@ If you have not yet applied an FCF this recipe will apply the
 appropriate default FCF before estimating the noise.
 \\*\\*
 \textbf{Note:} \drrecipe{SCUBA2\_CHECK\_RMS} can only be run on single
-observations. To get the map noise from a co-add you will have to
-perform the steps below.
+observations. To get the map noise from a co-add you should perform the steps below.
 \\*\\*
-\textbf{The steps}\\*
+\textbf{Steps for getting your map noise}\\*
 After applying any necessary FCF, \drrecipe{SCUBA2\_CHECK\_RMS} simply executes
 the following steps to get the map noise.
 \\*\\*
@@ -2910,9 +2907,9 @@ below}. You will need to adjust the scaling to view the error map properly.
 To assess the noise using \gaia, go to the toolbar on the main window
 and click on \linebreak[4]\gaiathing{Image-Analysis$\Rightarrow$Image
 regions}. Next select the region shape you would like to check and
-draw it on your map by clicking and dragging the mouse. Then click the
+draw it on your map by clicking and dragging the mouse. Click the
 \gaiathing{Stats selected} button in the \gaiathing{Image regions}
-window to get a report of the statistics.
+window to get a report of the statistics in the selected region.
 
 \begin{latexonly}
 \begin{center}
@@ -2993,6 +2990,7 @@ rescale the map to bring out the masks--see \cref{Figure}{fig:qualdisp}{below}.
    QUALITY component of your map.
 }
 
+\html{\vspace{3mm}}
 Each value in the QUALITY component of an NDF contains eight ``on/off''
 flags used to indicate a specific binary property of the pixel. The
 first three of these flags indicate whether a pixel is inside or outside a
@@ -3006,7 +3004,8 @@ There are four potential values for the common combination of
 2 = pixel is inside \texttt{FLT} mask but not \texttt{AST} mask\\
 3 = pixel is inside neither mask (i.e. is a background pixel)
 \\*\\*
-The maximum quality value increases from 3 to 7 if \texttt{COM} masking is included.
+The maximum quality value increases from 3 to 7 if \texttt{COM} masking is
+also included.
 
 You can see which bit is used for each mask with \showqual.
 \begin{myquote}
@@ -3259,8 +3258,7 @@ configuration files. These can be found in the default makemap file,
 online at the \starlink\ \htmladdnormallink{github
 repository}{https://github.com/Starlink/starlink/blob/master/applications/smurf/defaults/smurf\_makemap.def}
 \latex{\footnote{\texttt{https://github.com/Starlink/starlink/blob/master/applications/smurf/defaults/smurf\_makemap.def}}}.
-We do not advise users to alter any of these default parameters
-however.
+ However, we do not advise users to alter any of these default parameters.
 
 \begin{latexonly}
 \begin{center}
@@ -3496,7 +3494,7 @@ used to weight the data for subsequent iterations, hence more finely
 estimated noise levels are preferable.
 
 The parameter \texttt{noi.box\_size} helps remove `scuffs' or other
-noise artifacts you might see in your error map due to a sub-array (or
+noise artefacts you might see in your error map due to a sub-array (or
 arrays) temporarily jumping to a higher noise state. The default file
 has \texttt{noi.box\_size~=$-$15} (i.e. half a sub-scan). As the
 value tends to $-$1 (one second) we find some of the source signal being
@@ -3572,7 +3570,7 @@ the mask to remain in the final map.
 The bright-extended recipe also sets \texttt{ast.skip} to 5. This
 means the \texttt{AST} model is not determined at all for the first
 five iterations. This used in conjunction with \texttt{FLT} masking
-which is done in these \texttt{AST}-free iterations.
+which is performed in these \texttt{AST}-free iterations.
 \\\\
 \textbf{External masking}\\
 An alternative to S/N masking is to supply an external mask using the
@@ -3618,7 +3616,7 @@ pixel size. A fixed externally supplied mask  can get around these problems.
 The sequence below is a summary of the procedure for generating and
 supplying an external mask. In this example the mask is generated from
 the map produced by an initial run through the map-maker.
-Alternatively maps from other telescopes can be used.
+Alternatively maps from other observatories can be used.
 
 These steps are followed in the example in
 \cref{Section}{sec:bright_ex}{Extended galactic sources}.
@@ -3663,11 +3661,8 @@ Archive. For instructions on converting from FITS to NDF see
 % thresh 850map_snr 850map_mask thrlo=3 newlo=0 thrhi=3 newhi=1
 \end{verbatim}
 \end{myquote}
-In the step above you can set everything below 3$\sigma$ to
-\texttt{bad} and use this as your mask. However this generates a hard
-3$\sigma$ cut-off to your map which is unrealistic for the real data.
-Instead the following 2 steps are performed to smooth the edges of the
-mask.\\
+This generates a mask which has an unrealistic hard 3$\sigma$ cut-off. Step 4
+is performed to smooth the the edges of your mask.\\
 \end{minipage}
 
 
@@ -3766,7 +3761,7 @@ LOGFILE=skyloop.log ILEVEL=ATASK GLEVEL=debug
 \hline
 \textbf{PROBLEM} & \textbf{POSSIBLE SOLUTION}\\
 \hline
-I have blobs in my map that look like thumbprints. & Try including
+I have blobs in my map that look like big thumbprints. & Try including
 \texttt{dimmconfig\_fix\_blobs.lis} parameters:
 \begin{itemize}[nolistsep]
   \item \param{flt.filt\_order~=~4} to set a 4th-order Butterworth filter for
@@ -3830,7 +3825,7 @@ iterations.\\
 \hline
 \textbf{PROBLEM} & \textbf{POSSIBLE SOLUTION}\\
 \hline
-I have blobs in my map that look like thumbprints. & Try including
+I have blobs in my map that look like big thumbprints. & Try including
 \texttt{dimmconfig\_fix\_blobs.lis} parameters:
 \begin{itemize}
   \item \param{flt.filt\_order~=~4} to set a 4th-order Butterworth filter for
@@ -4979,22 +4974,12 @@ effective shape of a point-source in this background-subtracted map.
 
 Before running \textsc{Picard}, a simple parameters file called \texttt{smooth.ini}
 may be created.
-\begin{latexonly}
-%\begin{figure}[ht!]
-\begin{center}
-\begin{fmpage}{0.8\linewidth}
-\vspace{0.2cm}
 \begin{quote}
 \begin{verbatim}
 [SCUBA2_MATCHED_FILTER]
 SMOOTH_FWHM = 15
 \end{verbatim}
 \end{quote}
-\vspace{0.4cm}
-\end{fmpage}
-\end{center}
-%\end{figure}
-\end{latexonly}
 %
 where \texttt{SMOOTH\_FWHM~=~15} indicates that the background should
 be estimated by first smoothing the map and PSF with a 15~arcsec FWHM
