--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -217,8 +217,8 @@
 \titlespacing*{\subsection}{0pt}{20pt}{\baselineskip}
 
 
-% Shortcuts
-% ---------
+%  Shortcuts
+%  ---------
 
 % Typographical shortcuts
 \newcommand{\fcfbe}{$\mathrm{FCF_{beamequiv}}$}
@@ -229,10 +229,10 @@
 % SCUBA reference
 %\newcommand{\scuba}{\htmladdnormallink{SCUBA}{http://www.jach.hawaii.edu/JCMT/}}
 
-% Starlink Package names
+% Starlink Package name
 \newcommand{\starlink}{\htmladdnormallink{Starlink}{http://starlink.jach.hawaii.edu}}
 
-% Set up some common package names
+% Set up some common package names.
 \newcommand{\ccdpack}{\xref{\textsc{Ccdpack}}{sun139}{}}
 \newcommand{\convert}{\xref{\textsc{Convert}}{sun55}{}}
 \newcommand{\cupid}{\xref{\textsc{Cupid}}{sun255}{}}
@@ -372,8 +372,8 @@
 % reference.
 \newcommand{\cref}[3]{\latexhtml{#1~\ref{#2}}{\htmlref{#3}{#2}}}
 
-% LaTex2HTML has problem with coloured text swapping it from the
-% myquote context to the main text.
+%  LaTex2HTML has a problem with coloured text swapping it from
+%  the \myquote context to the main text.
 
 \begin{htmlonly}
    \renewenvironment{myquote}{
