docs: Provide links and DOIs for the three SCUBA-2 MNRAS papers referenced in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -4621,8 +4621,10 @@ Chapin~E.~L., et~al., 2013, \textit{SMURF -- Sub-Millimetre User Reduction
 Facility}, \xref{Starlink User Note 258}{sun258}{}
 
 \bibitem{mapmaker}
-Chapin~E.~L., et~al., 2013, \textit{SCUBA-2: iterative map-making with the
-Sub-Millimetre User Reduction Facility} MNRAS, 430, 2545
+Chapin~E.~L., et~al., 2013,
+\htmladdnormallink{\textit{SCUBA-2: iterative map-making with the
+Sub-Millimetre User Reduction Facility}}{http://dx.doi.org/10.1093/mnras/stt052},
+MNRAS, 430, 2545 (DOI:10.1093/mnras/stt052)
 
 \bibitem{ssds}
 Currie~M.~J., Wallace~P.~T., Warren-Smith~R.~F., 1989,
@@ -4634,8 +4636,9 @@ Currie~M.~J., Berry~D.~S, 2013, \textit{KAPPA -- Kernel Application Package},
 \xref{Starlink User Note 95}{sun95}{}
 
 \bibitem{dempsey12}
-Dempsey~J.~T. et al., 2013, \textit{SCUBA-2: on-sky calibration using
-submillimetre standard sources}, MNRAS, 430, 2534
+Dempsey~J.~T. et al., 2013, \htmladdnormallink{\textit{SCUBA-2: on-sky calibration using
+submillimetre standard sources}}{http://dx.doi.org/10.1093/mnras/stt090},
+MNRAS, 430, 2534 (DOI:10.1093/mnras/stt090)
 
 \bibitem{dempsey-spie}
 Dempsey~J.~T., Friberg~P., Jenness~T., Bintley~D., Holland~W.~S., 2010
@@ -4654,8 +4657,10 @@ PIpeline for Combining and Analyzing Reduced Data}
 \xref{Starlink User Note 265}{sun265}{}
 
 \bibitem{s2main}
-Holland, W. S., et~al, 2013, \textit{SCUBA-2: The 10,000 pixel bolometer
-camera on the James Clerk Maxwell Telescope}, MNRAS, 430, 2513
+Holland, W. S., et~al, 2013, \htmladdnormallink{\textit{SCUBA-2: The
+10,000 pixel bolometer camera on the James Clerk Maxwell Telescope}}
+{http://dx.doi.org/10.1093/mnras/sts612}, MNRAS, 430, 2513
+(DOI:10.1093/mnras/sts612)
 
 \bibitem{flux1}
 Jenness~T., et~al, 2002, \htmladdnormallink{\textit{Towards the automated
