docs: Make chapter headings for LaTeX only in SC/21.
This generates headings of the following form.

Chapter <section number>n
Title <title>

This works fine for the PDF, but the Latex2HTML appears not to be
respecting %\begin{latexonly} ... %\end{latexonly} construct.  As a
consequence the HTML has two new sections before the Introduction with
"<: titles and parts of the titlesec defintions.  There must surely be
a way to prevent the titlesec definitions from being accessed for the
HMTL build (given that LaTeX2HTML does not support this package).  If
we have to live with one or the other, we are going with the PDF.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -556,13 +556,19 @@
 
 %  This is for chapter-like headings.  It must come after the tables of
 %  contents and figures to avoid these having a zero chapter number
-%  appearing.
-\titleformat{\section}[display]
-    {\normalfont\huge\bfseries}
-    {}
-    {0pt}
-    {Chapter \thesection:\hspace{0.8cm}}
-    \titlespacing*{\section}{0pt}{0pt}{20pt}
+%  appearing.  The comments before the \begin{latexonly} and
+%  \begin{latexonly} environment must be retained for the definitions
+%  to persist outside this block.  See MUD/152, p38.
+%  Despite the latexonly environment, this causes the HTML some grief
+%  and creates < section headings.
+%\begin{latexonly}
+  \titleformat{\section}[display]
+     {\normalfont\huge\bfseries}
+      {}
+     {0pt}
+     {Chapter \thesection\newline}
+     \titlespacing*{\section}{0pt}{0pt}{20pt}
+%\end{latexonly}
 
 
 \section{\xlabel{introduction}Introduction}
