--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -1592,11 +1592,80 @@ models and all the associated caveats can be found in Chapin et al.
 \caption{\small Table adopted from Chapin et al. (2013). A detailed
 explanation of each model is given in \cref{Section}{sec:models}{The individual models}.}
 \end{table}
+
+
+\textbf{COM}\\*
+The \texttt{COM} model removes the
+common-mode signal (the signal that is common to all bolometers), the
+dominant contributor to this signal being the sky noise. It determines
+this by simply averaging over all bolometers for each time slice.
+Bolometers are flagged as bad, (and thus omitted from the final map), if
+they do not resemble the \texttt{COM} model seen by the majority of the
+other bolometers.
+\newline Extended emission on a scale larger than the array footprint
+on the sky will contribute a signal indistinguishable from a
+common-mode signal. This puts an upper limit on the spatial scale of
+astronomical emission that can be recovered. \\
+
+\textbf{GAI}\\*
+\texttt{GAI} model works with
+\texttt{COM} in removing the common-mode signal. \texttt{GAI} is used to
+scale the \texttt{COM} model that has been subtracted and is described by
+a gain and an offset to scale all the bolometers to the same level. This
+will allow the bolometers to share a common calibration further down the
+line. \\
+
+\textbf{EXT}\\*
+\texttt{EXT} applies the extinction
+correction. This is a time-varying scaling factor that is derived from
+the JCMT water-vapour radiometer. As it deals with 30-second chunks of
+data this accounts for varying conditions over a long observation. For
+more details see \cref{Appendix}{app:cal}{SCUBA-2 data calibration}. \\
+
+
+\textbf{FLT}\\*
+The \texttt{FLT} model acts on the Fourier transform
+of the bolometer data. High-pass (only allows \textit{higher} frequencies to
+pass) and low-pass (only allows \textit{lower} frequencies to pass) filters
+can be specified. These cut-off frequencies can either be be specified by
+you directly or as an angular spatial scale (which is subsequently
+converted into a frequency dependent on the speed at which the
+telescope is moving). The most important role of this model is to
+apply a high-pass filter in order to remove the $1/f$ noise. Note that
+extended emission varies slowly over the array; it therefore appears
+at low frequencies and complicates the choice of a high-pass filter. A
+further discussion of this matter is given in
+\cref{Section}{sec:bright_ex}{Extended galactic sources}\\
+\hrule
+
+\textbf{AST}\\*
+The \texttt{AST} model is generated in
+conjunction with a science map. Hence, the position of \texttt{AST} in the
+model order indicates at what stage the astronomical
+image should be estimated. When the \texttt{AST} model is called, the first
+step is regridding the raw time-series data, (using nearest-neighbour sampling),
+to produce an estimate of the final map. Following this, the map is
+projected back into the time domain and removed (as the \texttt{AST}
+model).\\
+
+
+\textbf{NOI}\\*
+\texttt{NOI} should come last in the model
+order and calculates the RMS noise in each bolometer.  \texttt{NOI} is
+determined by running \calcnoise\ (see \cref{Section}{sec:calcnoise}{Checking the
+array performance}) on the residual signal (the \texttt{RES}
+model, see \cref{Section}{sec:export}{Exporting individual models}).  Unlike
+the other models, \texttt{NOI} is
+not a subtraction or a correction but if specified, is used (from the
+second iteration onwards) to weight the bolometers in the map
+estimate.\\
 \end{htmlonly}
 \\ \\
+\begin{latexonly}
 \hrule
 \begin{minipage}[t]{0.12\linewidth}
 \centering\textbf{MODEL}
+\vspace{6pt}
 \end{minipage}
 \begin{minipage}[t]{0.88\linewidth}
 \centering\textbf{DESCRIPTION}
@@ -1690,6 +1759,7 @@ second iteration onwards) to weight the bolometers in the map
 estimate.\\
 \end{minipage}
 \hrule
+\end{latexonly}
 
 \subsection{\xlabel{convergence}Stopping criteria}
 \label{sec:converge}
