--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -1635,8 +1635,7 @@ apply a high-pass filter in order to remove the $1/f$ noise. Note that
 extended emission varies slowly over the array; it therefore appears
 at low frequencies and complicates the choice of a high-pass filter. A
 further discussion of this matter is given in
-\cref{Section}{sec:bright_ex}{Extended galactic sources}\\
-\hrule
+\cref{Section}{sec:bright_ex}{Extended galactic sources}.\\
 
 \textbf{AST}\\*
 The \texttt{AST} model is generated in
@@ -1727,7 +1726,7 @@ apply a high-pass filter in order to remove the $1/f$ noise. Note that
 extended emission varies slowly over the array; it therefore appears
 at low frequencies and complicates the choice of a high-pass filter. A
 further discussion of this matter is given in
-\cref{Section}{sec:bright_ex}{Extended galactic sources}\\
+\cref{Section}{sec:bright_ex}{Extended galactic sources}.\\
 \end{minipage}
 \hrule
 \vspace{0.1cm}
